# serde_eetf

./: .tool-versions  CHANGELOG.md  Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
