[package]
name = "serde_eetf"
version = "0.2.0"
authors = ["Graeme Coupar <grambo@grambo.me.uk>"]
description = "Erlang external term format support for serde."
homepage = "https://github.com/obmarg/serde_eetf"
repository = "https://github.com/obmarg/serde_eetf"
readme = "README.md"
keywords = ["serde", "serialization", "erlang", "elixir", "eetf"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { "repository" = "obmarg/serde_eetf" }
maintenance = { status = "experimental" }


[dependencies]
serde = "1.0"
eetf = "0.4"
num-bigint = "0.2"
num-traits = "0.2"
heck ="0.3"

[dev-dependencies]
serde_derive = "1.0"
